Modified TableDifferTest to be line separator neutral.  Java takes care that for us; so we should be neutral in this regard unless we are specifically testing line termination differences when producing feature files on one OS and using it on another OS.
Also tightened up the reporting produced via maven builds as specified
in the pom.xml.